@@ -1,5 +1,6 @@
 2.4.31
 - Add old 2D model back as resource pack
+- Fix Spear model misalignment
 
 2.4.30
 - Fix PST compatibility
